--- a/requirements.txt
+++ b/requirements.txt
@@ -6,9 +6,9 @@ pbr>=2.0.0  # Apache-2.0
 PyYAML>=3.10.0  # MIT
 six>=1.9.0  # MIT
 Jinja2>=2.8,!=2.9.0,!=2.9.1,!=2.9.2,!=2.9.3,!=2.9.4  # BSD License (3 clause)
-requests>=2.10.0,!=2.12.2,!=2.13.0  # Apache-2.0
+requests # Apache-2.0
 python-bugzilla>=2.1.0
 pygerrit>=1.0.0
-py-trello>=0.9.0
+py-trello>=0.11.3
 click>=6.7
 launchpadlib>=1.10.6
